# apnea-audio

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/apnea_screen/: __init__.py  __main__.py  app.py  audio_loader.py  detector.py  pipeline.py  quality.py  report.py  separator.py
tests/: test_audio_loader.py  test_confidence.py  test_detector.py  test_quality.py  test_sam_separator.py  test_separator.py
