[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apnea-screen"
version = "0.2.0"
description = "Sleep-apnea screening from overnight audio recordings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "librosa>=0.10",
    "soundfile>=0.12",
    "matplotlib>=3.7",
    "streamlit>=1.30",
]

[project.optional-dependencies]
sam = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "audiosep",
]
neural = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "openunmix>=1.3",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
